@@ -1,7 +1,6 @@
 package org.aksw.jena_sparql_api.lookup;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.aksw.jena_sparql_api.util.collection.RangedSupplier;
 
@@ -10,10 +9,10 @@ import com.google.common.collect.Range;
 public interface ListPaginator<T>
     extends RangedSupplier<Long, T>
 {
-    CountInfo fetchCount(Long itemLimit, Long rowLimit);
+    Range<Long> fetchCount(Long itemLimit, Long rowLimit);
 
     default List<T> fetchList(Range<Long> range) {
-        List<T> result = apply(range).collect(Collectors.toList());
+        List<T> result = apply(range).toList().blockingGet(); //.collect(Collectors.toList());
         return result;
     }
 
